care/force-app/main/default/objects/Feature__c/Feature__c.object-meta.xml
<CustomObject>
    <description>Holds the features of an Salesforce Release that are relevant for our UE Org.</description>
    <label>Feature</label>
    <nameField>
        <label>Feature Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Features</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>