care/force-app/main/default/objects/Feature__c/fields/Action_Notes__c.field-meta.xml
<CustomField>
    <fullName>Action_Notes__c</fullName>
    <description>Enter action to provide or note your suggestions here.</description>
    <inlineHelpText>Enter action to provide or note your suggestions here.</inlineHelpText>
    <label>Action/Notes</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>