care/force-app/main/default/objects/Feature__c/fields/Activated__c.field-meta.xml
<CustomField>
    <fullName>Activated__c</fullName>
    <description>Date of Feature Activation date, like for Critical Updates</description>
    <inlineHelpText>Set, if Feature has an Activation date, like for Critical Updates</inlineHelpText>
    <label>Activated</label>
    <type>Date</type>
</CustomField>