care/force-app/main/default/objects/Feature__c/fields/Adult_Backupcare__c.field-meta.xml
<CustomField>
    <fullName>Adult_Backupcare__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Adult Backupcare</label>
    <type>Checkbox</type>
</CustomField>