care/force-app/main/default/objects/Feature__c/fields/Availability_Type__c.field-meta.xml
<CustomField>
    <fullName>Availability_Type__c</fullName>
    <description>Availability Type as stated in the Release Notes or Source</description>
    <label>Availability Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Enabled for users</fullName>
                <default>true</default>
                <label>Enabled for users</label>
            </value>
            <value>
                <fullName>Enabled for administrators/​developers</fullName>
            </value>
            <value>
                <fullName>Requires administrator setup</fullName>
            </value>
            <value>
                <fullName>Contact Salesforce to enable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>