care/force-app/main/default/objects/Feature__c/fields/Available_for_Admin_Services__c.field-meta.xml
<CustomField>
    <fullName>Available_for_Admin_Services__c</fullName>
    <defaultValue>false</defaultValue>
    <description>is this feature available for Admin Services</description>
    <label>Available for Admin Services</label>
    <type>Checkbox</type>
</CustomField>