care/force-app/main/default/objects/Feature__c/fields/Available_in_Lightning__c.field-meta.xml
<CustomField>
    <fullName>Available_in_Lightning__c</fullName>
    <description>Indicates, if a feature is available in lightning on feature release.</description>
    <inlineHelpText>Enter, if and how a feature is available in lightning on feature release.</inlineHelpText>
    <label>Available in Lightning</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>check</fullName>
                <default>true</default>
                <label>check</label>
            </value>
            <value>
                <fullName>yes</fullName>
            </value>
            <value>
                <fullName>coming soon</fullName>
            </value>
            <value>
                <fullName>enhanced</fullName>
            </value>
            <value>
                <fullName>not yet</fullName>
            </value>
            <value>
                <fullName>no</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>