care/force-app/main/default/objects/Feature__c/fields/Backupcare__c.field-meta.xml
<CustomField>
    <fullName>Backupcare__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Backupcare</label>
    <type>Checkbox</type>
</CustomField>