care/force-app/main/default/objects/Feature__c/fields/Business_Development__c.field-meta.xml
<CustomField>
    <fullName>Business_Development__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This feature is used by this Team.</description>
    <label>Business Development</label>
    <type>Checkbox</type>
</CustomField>