care/force-app/main/default/objects/Feature__c/fields/Care_Work__c.field-meta.xml
<CustomField>
    <fullName>Care_Work__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This feature is used by this Team.</description>
    <label>Care@Work</label>
    <type>Checkbox</type>
</CustomField>