care/force-app/main/default/objects/Feature__c/fields/Cloud__c.field-meta.xml
<CustomField>
    <fullName>Cloud__c</fullName>
    <description>Cloud Name if given</description>
    <label>Cloud</label>
    <length>100</length>
    <type>Text</type>
</CustomField>