care/force-app/main/default/objects/Feature__c/fields/Community__c.field-meta.xml
<CustomField>
    <fullName>Community__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This feature is used by this Team.</description>
    <label>Community</label>
    <type>Checkbox</type>
</CustomField>