care/force-app/main/default/objects/Feature__c/fields/Critical_Update__c.field-meta.xml
<CustomField>
    <fullName>Critical_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To check, if a feature is announced as a Critical Update</description>
    <inlineHelpText>Check, if a feature is announced as a Critical Update</inlineHelpText>
    <label>Critical Update</label>
    <type>Checkbox</type>
</CustomField>