care/force-app/main/default/objects/Feature__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description from SF</description>
    <label>Description</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>