care/force-app/main/default/objects/Feature__c/fields/Developer_Edition__c.field-meta.xml
<CustomField>
    <fullName>Developer_Edition__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Feature is available for DE</description>
    <label>Developer Edition</label>
    <type>Checkbox</type>
</CustomField>