care/force-app/main/default/objects/Feature__c/fields/End_of_Service_date__c.field-meta.xml
<CustomField>
    <fullName>End_of_Service_date__c</fullName>
    <description>If marked to be resigned. End of Service date.</description>
    <label>End of Service date</label>
    <type>Date</type>
</CustomField>