care/force-app/main/default/objects/Feature__c/fields/End_of_Service_release__c.field-meta.xml
<CustomField>
    <fullName>End_of_Service_release__c</fullName>
    <description>If marked to be resigned. End of Service release.</description>
    <label>End of Service release</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Spring16</fullName>
            </value>
            <value>
                <fullName>Summer16</fullName>
            </value>
            <value>
                <fullName>Winter16</fullName>
            </value>
            <value>
                <fullName>Spring17</fullName>
            </value>
            <value>
                <fullName>Summer17</fullName>
            </value>
            <value>
                <fullName>Winter17</fullName>
            </value>
            <value>
                <fullName>Spring18</fullName>
            </value>
            <value>
                <fullName>Summer18</fullName>
            </value>
            <value>
                <fullName>Winter18</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>