care/force-app/main/default/objects/Feature__c/fields/Enterprise_Edition__c.field-meta.xml
<CustomField>
    <fullName>Enterprise_Edition__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Feature is available for EE</description>
    <label>Enterprise Edition</label>
    <type>Checkbox</type>
</CustomField>