care/force-app/main/default/objects/Feature__c/fields/Feature_ID__c.field-meta.xml
<CustomField>
    <fullName>Feature_ID__c</fullName>
    <description>Id Number for Features</description>
    <displayFormat>F-{00000}</displayFormat>
    <label>Feature ID</label>
    <type>AutoNumber</type>
</CustomField>