care/force-app/main/default/objects/Feature__c/fields/Homepay__c.field-meta.xml
<CustomField>
    <fullName>Homepay__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This feature is used by this Team.</description>
    <label>Homepay</label>
    <type>Checkbox</type>
</CustomField>