care/force-app/main/default/objects/Feature__c/fields/Impact__c.field-meta.xml
<CustomField>
    <fullName>Impact__c</fullName>
    <description>Guessed Impact that the Feature could have on our Orgs.</description>
    <inlineHelpText>Enter the Impact Level that this featuere might have in our Orgs.</inlineHelpText>
    <label>Impact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Check</fullName>
            </value>
            <value>
                <fullName>Moderate</fullName>
            </value>
            <value>
                <fullName>Limited</fullName>
            </value>
            <value>
                <fullName>Significant</fullName>
            </value>
            <value>
                <fullName>Future</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>