care/force-app/main/default/objects/Feature__c/fields/Include_in_Dev_Info_Email__c.field-meta.xml
<CustomField>
    <fullName>Include_in_Dev_Info_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check, if other Dev Teams should be informed about this change.</description>
    <inlineHelpText>Check, if other Dev Teams should be informed about this change.</inlineHelpText>
    <label>Include in Dev Info Email</label>
    <type>Checkbox</type>
</CustomField>