care/force-app/main/default/objects/Feature__c/fields/Include_In_User_Info_Email__c.field-meta.xml
<CustomField>
    <fullName>Include_In_User_Info_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check, if the users should be informed about this feature in the release information email.</description>
    <inlineHelpText>Check, if the users should be informed about this feature in the release information email.</inlineHelpText>
    <label>Include In User Info Email</label>
    <type>Checkbox</type>
</CustomField>