care/force-app/main/default/objects/Feature__c/fields/Inside_Sales__c.field-meta.xml
<CustomField>
    <fullName>Inside_Sales__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This feature is used by this Team.</description>
    <label>Inside Sales</label>
    <type>Checkbox</type>
</CustomField>