care/force-app/main/default/objects/Feature__c/fields/Int_Operations_Membercare__c.field-meta.xml
<CustomField>
    <fullName>Int_Operations_Membercare__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This feature is used by this Team.</description>
    <label>Int. Operations</label>
    <type>Checkbox</type>
</CustomField>