care/force-app/main/default/objects/Feature__c/fields/Int_WPS_Service__c.field-meta.xml
<CustomField>
    <fullName>Int_WPS_Service__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The feature is used by this team.</description>
    <label>Int. WPS Service</label>
    <type>Checkbox</type>
</CustomField>