care/force-app/main/default/objects/Feature__c/fields/Jira_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Jira_Ticket__c</fullName>
    <description>SFORCE Ticket Number, if existing</description>
    <label>Jira Ticket</label>
    <length>12</length>
    <type>Text</type>
</CustomField>