care/force-app/main/default/objects/Feature__c/fields/Knowledge_Article__c.field-meta.xml
<CustomField>
    <fullName>Knowledge_Article__c</fullName>
    <description>Link to according Knowledge Article</description>
    <label>Knowledge Article</label>
    <type>Url</type>
</CustomField>