care/force-app/main/default/objects/Feature__c/fields/Marketing__c.field-meta.xml
<CustomField>
    <fullName>Marketing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This feature is used by this Team.</description>
    <label>Marketing</label>
    <type>Checkbox</type>
</CustomField>