care/force-app/main/default/objects/Feature__c/fields/Organizationwide_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Organizationwide_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This feature is used by all Teams, it is organizationwide enabled.</description>
    <label>Organizationwide Enabled</label>
    <type>Checkbox</type>
</CustomField>