care/force-app/main/default/objects/Feature__c/fields/Other_Sources__c.field-meta.xml
<CustomField>
    <fullName>Other_Sources__c</fullName>
    <description>Other relevant information sources</description>
    <label>Other Sources</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>