care/force-app/main/default/objects/Feature__c/fields/Professional_Edition__c.field-meta.xml
<CustomField>
    <fullName>Professional_Edition__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Feature is available for PE</description>
    <label>Professional Edition</label>
    <type>Checkbox</type>
</CustomField>