care/force-app/main/default/objects/Feature__c/fields/QA__c.field-meta.xml
<CustomField>
    <fullName>QA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This feature is used by this Team.</description>
    <label>Us/Int. QA</label>
    <type>Checkbox</type>
</CustomField>