care/force-app/main/default/objects/Feature__c/fields/Release_Notes_Link__c.field-meta.xml
<CustomField>
    <fullName>Release_Notes_Link__c</fullName>
    <description>Link to Description in Release Notes.</description>
    <label>Release Notes Link</label>
    <type>Url</type>
</CustomField>