care/force-app/main/default/objects/Feature__c/fields/Release_Version__c.field-meta.xml
<CustomField>
    <fullName>Release_Version__c</fullName>
    <description>Release in which this feature is first entered. Changes will be tracked as cases.</description>
    <label>Release Version</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Winter21</fullName>
            </value>
            <value>
                <fullName>Summer20</fullName>
                <default>true</default>
                <label>Summer20</label>
            </value>
            <value>
                <fullName>Spring20</fullName>
            </value>
            <value>
                <fullName>Winter20</fullName>
            </value>
            <value>
                <fullName>Summer19</fullName>
            </value>
            <value>
                <fullName>Spring19</fullName>
            </value>
            <value>
                <fullName>Winter19</fullName>
            </value>
            <value>
                <fullName>Summer18</fullName>
            </value>
            <value>
                <fullName>Spring18</fullName>
            </value>
            <value>
                <fullName>Winter18</fullName>
            </value>
            <value>
                <fullName>Summer17</fullName>
            </value>
            <value>
                <fullName>Spring17</fullName>
            </value>
            <value>
                <fullName>Winter17</fullName>
            </value>
            <value>
                <fullName>Winter16</fullName>
            </value>
            <value>
                <fullName>Summer16</fullName>
            </value>
            <value>
                <fullName>Spring16</fullName>
            </value>
            <value>
                <fullName>Winter15</fullName>
            </value>
            <value>
                <fullName>Summer15</fullName>
            </value>
            <value>
                <fullName>Spring15</fullName>
            </value>
            <value>
                <fullName>Winter14</fullName>
            </value>
            <value>
                <fullName>Spring21</fullName>
            </value>
            <value>
                <fullName>Summer21</fullName>
            </value>
            <value>
                <fullName>Winter22</fullName>
            </value>
            <value>
                <fullName>Spring22</fullName>
            </value>
            <value>
                <fullName>Summer22</fullName>
            </value>
            <value>
                <fullName>Winter23</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>