care/force-app/main/default/objects/Feature__c/fields/Restore_Deletion_Date__c.field-meta.xml
<CustomField>
    <fullName>Restore_Deletion_Date__c</fullName>
    <description>used to indicate the date the record should be deleted or has been deleted.</description>
    <label>Restore-Deletion-Date</label>
    <type>Date</type>
</CustomField>