care/force-app/main/default/objects/Feature__c/fields/Restore_Deletion_Status__c.field-meta.xml
<CustomField>
    <fullName>Restore_Deletion_Status__c</fullName>
    <description>use to mark a record for restore - deletion. Delete if active.</description>
    <inlineHelpText>Set Status to active, if this record should be deleted and later restored.</inlineHelpText>
    <label>Restore-Deletion-Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>inactive</fullName>
                <default>true</default>
                <label>inactive</label>
            </value>
            <value>
                <fullName>active</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>