care/force-app/main/default/objects/Feature__c/fields/Section__c.field-meta.xml
<CustomField>
    <fullName>Section__c</fullName>
    <description>Release Notes Section. First level of feature hierarchy in terms of Cloud Assignement.</description>
    <label>Section</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Analytics</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Communities</fullName>
            </value>
            <value>
                <fullName>Chatter</fullName>
            </value>
            <value>
                <fullName>Files</fullName>
            </value>
            <value>
                <fullName>Search</fullName>
            </value>
            <value>
                <fullName>Data.com</fullName>
            </value>
            <value>
                <fullName>Customization</fullName>
            </value>
            <value>
                <fullName>Security and Identity</fullName>
                <label>Security, Privacy and Identity</label>
            </value>
            <value>
                <fullName>Deployment</fullName>
            </value>
            <value>
                <fullName>Development</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Salesforce Overall</fullName>
            </value>
            <value>
                <fullName>Critical Updates</fullName>
            </value>
            <value>
                <fullName>Doc Content</fullName>
            </value>
            <value>
                <fullName>Other Salesforce Products</fullName>
            </value>
            <value>
                <fullName>Lightning Experience Adoption</fullName>
            </value>
            <value>
                <fullName>Salesforce Surveys</fullName>
            </value>
            <value>
                <fullName>Einstein Analytics</fullName>
            </value>
            <value>
                <fullName>Salesforce App</fullName>
            </value>
            <value>
                <fullName>Lightning App Builder</fullName>
            </value>
            <value>
                <fullName>Lightning Flow</fullName>
            </value>
            <value>
                <fullName>Data Protection and Privacy</fullName>
            </value>
            <value>
                <fullName>General Setup</fullName>
            </value>
            <value>
                <fullName>Supported Browsers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>