care/force-app/main/default/objects/Feature__c/fields/Senior_Care__c.field-meta.xml
<CustomField>
    <fullName>Senior_Care__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This feature is used by this Team.</description>
    <label>Senior Care</label>
    <type>Checkbox</type>
</CustomField>