care/force-app/main/default/objects/Feature__c/fields/SF_Admin_Team__c.field-meta.xml
<CustomField>
    <fullName>SF_Admin_Team__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This feature is used by this Team.</description>
    <label>SF Admin Team</label>
    <type>Checkbox</type>
</CustomField>