care/force-app/main/default/objects/Feature__c/fields/SF_Variant__c.field-meta.xml
<CustomField>
    <fullName>SF_Variant__c</fullName>
    <description>Feature is availble for SFC, SFA, SF1 or LTE</description>
    <label>SF Variant</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce Classic</fullName>
            </value>
            <value>
                <fullName>Lightning Experience</fullName>
            </value>
            <value>
                <fullName>SFC &amp; LEX</fullName>
            </value>
            <value>
                <fullName>Salesforce1</fullName>
            </value>
            <value>
                <fullName>SalesforceA</fullName>
            </value>
            <value>
                <fullName>SFA &amp; SF1</fullName>
            </value>
            <value>
                <fullName>SFC &amp; LEX &amp; SFM</fullName>
            </value>
            <value>
                <fullName>SFC &amp; SFM</fullName>
            </value>
            <value>
                <fullName>LEX &amp; SFM</fullName>
            </value>
            <value>
                <fullName>Einstein Analytics</fullName>
            </value>
            <value>
                <fullName>Salesforce Mobile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>