care/force-app/main/default/objects/Feature__c/fields/SFORCE__c.field-meta.xml
<CustomField>
    <fullName>SFORCE__c</fullName>
    <description>To hold the SFORCE Jira Number or a Desc</description>
    <inlineHelpText>Enter SFORCE Jira Number or a Desc</inlineHelpText>
    <label>SFORCE</label>
    <length>80</length>
    <type>Text</type>
</CustomField>