care/force-app/main/default/objects/Feature__c/fields/Social_Media_Team__c.field-meta.xml
<CustomField>
    <fullName>Social_Media_Team__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Social Media Team</label>
    <type>Checkbox</type>
</CustomField>