care/force-app/main/default/objects/Feature__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>source of the information about this feature</description>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Release Notes</fullName>
                <default>true</default>
                <label>Release Notes</label>
            </value>
            <value>
                <fullName>Notification message</fullName>
            </value>
            <value>
                <fullName>Critical Messages</fullName>
            </value>
            <value>
                <fullName>A. Executives</fullName>
            </value>
            <value>
                <fullName>Help and Training</fullName>
            </value>
            <value>
                <fullName>Success Community</fullName>
            </value>
            <value>
                <fullName>Technical Support</fullName>
            </value>
            <value>
                <fullName>Release Readiness</fullName>
            </value>
            <value>
                <fullName>Training and Certification</fullName>
            </value>
            <value>
                <fullName>Web</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>