care/force-app/main/default/objects/Feature__c/fields/Starter_Edition__c.field-meta.xml
<CustomField>
    <fullName>Starter_Edition__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Feature is available for SE</description>
    <label>Starter Edition</label>
    <type>Checkbox</type>
</CustomField>