care/force-app/main/default/objects/Feature__c/fields/Subsection__c.field-meta.xml
<CustomField>
    <fullName>Subsection__c</fullName>
    <description>Release Notes Subsection. Second level of hirarchy in terms of assignement to a cloud.</description>
    <label>Subsection</label>
    <length>255</length>
    <type>Text</type>
</CustomField>