care/force-app/main/default/objects/Feature__c/fields/Subsection_Part__c.field-meta.xml
<CustomField>
    <fullName>Subsection_Part__c</fullName>
    <description>Release Notes Subsection Part. Third level of hierarchy in terms of assignement to a cloud.</description>
    <label>Subsection Part</label>
    <length>255</length>
    <type>Text</type>
</CustomField>