care/force-app/main/default/objects/Feature__c/fields/Suggested_for_internal_Training__c.field-meta.xml
<CustomField>
    <fullName>Suggested_for_internal_Training__c</fullName>
    <defaultValue>false</defaultValue>
    <description>is this feature suggested for internal Training? Would it be useful to keep this in mind to offer?</description>
    <label>Suggested for internal Training</label>
    <type>Checkbox</type>
</CustomField>