care/force-app/main/default/objects/Feature__c/fields/Trailhead_Module__c.field-meta.xml
<CustomField>
    <fullName>Trailhead_Module__c</fullName>
    <description>Link to the according Trailhead Module</description>
    <label>Trailhead Module</label>
    <type>Url</type>
</CustomField>