care/force-app/main/default/objects/Feature__c/fields/Unlimited_Edition__c.field-meta.xml
<CustomField>
    <fullName>Unlimited_Edition__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Feature is available in UE</description>
    <label>Unlimited Edition</label>
    <type>Checkbox</type>
</CustomField>