care/force-app/main/default/objects/Feature__c/fields/Us_Int_Development__c.field-meta.xml
<CustomField>
    <fullName>Us_Int_Development__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This feature is used by this Team.</description>
    <label>Us/Int. Development</label>
    <type>Checkbox</type>
</CustomField>