care/force-app/main/default/objects/Feature__c/fields/Used_by_App__c.field-meta.xml
<CustomField>
    <fullName>Used_by_App__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If known, check if an installed App is based on this feature.</description>
    <label>Used by App</label>
    <type>Checkbox</type>
</CustomField>