care/force-app/main/default/objects/Feature__c/fields/Used_in_Logan__c.field-meta.xml
<CustomField>
    <fullName>Used_in_Logan__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this feature is used in the Logan Org?</description>
    <inlineHelpText>Check, if this feature is used in the Logan Org</inlineHelpText>
    <label>Used in Logan</label>
    <type>Checkbox</type>
</CustomField>