care/force-app/main/default/objects/Feature__c/fields/Used_in_Production__c.field-meta.xml
<CustomField>
    <fullName>Used_in_Production__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field should indicate, if we are using a certain feature in production or not.</description>
    <inlineHelpText>Please check, if we are using a certain feature in production.</inlineHelpText>
    <label>Used in Production</label>
    <type>Checkbox</type>
</CustomField>