care/force-app/main/default/objects/Feature__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Section__c</columns>
    <columns>Availability_Type__c</columns>
    <columns>Release_Version__c</columns>
    <columns>SF_Variant__c</columns>
    <columns>Action_Notes__c</columns>
    <columns>Feature_ID__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
    <sharedTo>
        <role>SystemAdmin</role>
    </sharedTo>
</ListView>