care/force-app/main/default/objects/Feature__c/listViews/Spring17_Service.listView-meta.xml
<ListView>
    <fullName>Spring17_Service</fullName>
    <columns>NAME</columns>
    <columns>Section__c</columns>
    <columns>Subsection__c</columns>
    <columns>Action_Notes__c</columns>
    <columns>Availability_Type__c</columns>
    <columns>SF_Variant__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>End_of_Service_date__c</columns>
    <columns>End_of_Service_release__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Release_Version__c</field>
        <operation>equals</operation>
        <value>Spring17</value>
    </filters>
    <filters>
        <field>Section__c</field>
        <operation>equals</operation>
        <value>Service</value>
    </filters>
    <label>Spring17 Service</label>
    <language>en_US</language>
    <sharedTo>
        <role>SystemAdmin</role>
    </sharedTo>
</ListView>